2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Added encode/decode functions in order to support odd-size image.

	* operations/frequency/tools/display.c: a small modify.
	* operations/frequency/tools/fourier.c: added encode/decode functions.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/preview-frequency.c: fixed a bug that forget to
	free memory.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/preview-frequency.c: moved to the new format.
	* operations/frequency/tools/display.c: added.

2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Moved to the new format successfully.

	* operations/Makefile.am: added the path: frequency.
	* operations/frequency/dft.c: the first step to move to the new format.
	* operations/frequency/idft.c: the first step to move to the new format.

2008-06-27  Zhang Junbo  <zhangjb@svn.gnome.org>

	Restart from trunck. Added dft.c first.

	* AUTHORS:
	* configure.ac:
	* operations/frequency/Makefile.am:
	* operations/frequency/dft.c:
	* operations/frequency/tools/Makefile.am:
	* operations/frequency/tools/component.c:
	* operations/frequency/tools/fourier.c:

2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	Documentation improvements (mostly orthographic) from Peter
	(gib_mir_mehl at gmx.net).

	* gegl/buffer/gegl-buffer.c:
	* gegl/buffer/gegl-buffer.h:
	* gegl/gegl-config.c:
	* gegl/graph/gegl-node.c:
	* gegl/operation/gegl-operation.h:
	* gegl/process/gegl-processor.c:
	* operations/affine/affine.c:
	* operations/affine/rotate.c:
	* operations/common/c2g.c:
	* operations/common/difference-of-gaussians.c:
	* operations/common/introspect.c:
	* operations/common/rectangle.c:
	* operations/common/stretch-contrast.c:
	* operations/external/display.c:
	* operations/external/save-pixbuf.c:
	* operations/workshop/snn-percentile.c:

2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	* gegl/property-types/gegl-color.c: (gegl_color_get_string): applied
	change from Peter gib_mir_mehl at gmx.net.
